references/cuegen/testdata/invalid/non_string_map_key.go
package invalid

type NonStringMapKey struct {
	Field1 map[int]string `json:"field1"`
}
